--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Data discoveries"
+title                    : "Data Stories Aotearoa"
 title_separator          : "-"
 name                     : "Kamal Hothi"
-description              : "Thinking and communicating data."
+description              : "Understanding New Zealand through data and stories."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -77,9 +77,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kamal Hothi"
+  name             : "Harkanwal"
   avatar           : "profile.jpg"
-  bio              : "Data journalist."
+  bio              : "Learning and understanding the world through data."
   location         : "Auckland, New Zealand"
   email            : "harkanwal@fastmail.fm"
   uri              :
@@ -100,7 +100,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "kamal_hothi"
   vine             :
   weibo            :
   xing             :
@@ -226,3 +226,25 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
